--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <div class="container">
-            <img   src="/Scarecrow.png" alt="">
+            <img   src="./img/scraow.png" alt="">
             
                 <div class="content">
                     <h1>I have bad news for you</h1>
